[gd_scene load_steps=6 format=3 uid="uid://dypyeymk8mxp2"]

[ext_resource type="PackedScene" uid="uid://dl75aog1s15k1" path="res://ui/debug_overlay.tscn" id="1_8ycox"]
[ext_resource type="Script" path="res://levels/level.gd" id="1_darcq"]
[ext_resource type="PackedScene" uid="uid://yg75476prlvp" path="res://ui/pause_menu.tscn" id="2_5yvnj"]
[ext_resource type="PackedScene" uid="uid://diqb4edupeah0" path="res://ui/selection_rect.tscn" id="4_w31ht"]
[ext_resource type="PackedScene" uid="uid://beng7i167v0ck" path="res://camera/camera.tscn" id="5_ra4v7"]

[node name="Level" type="Node2D"]
script = ExtResource("1_darcq")

[node name="DebugLayer" type="CanvasLayer" parent="."]
visible = false

[node name="DebugOverlay" parent="DebugLayer" instance=ExtResource("1_8ycox")]

[node name="PauseMenuLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="PauseMenuLayer" instance=ExtResource("2_5yvnj")]
visible = false

[node name="SelectionRect" parent="." instance=ExtResource("4_w31ht")]

[node name="Camera" parent="." instance=ExtResource("5_ra4v7")]

[node name="Entities" type="Node2D" parent="."]
process_mode = 3
y_sort_enabled = true

[node name="Players" type="Node" parent="."]
